// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Watchlist component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="ant-row css-dev-only-do-not-override-1vtf12y"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1vtf12y"
      >
        <h1
          class="ant-typography css-dev-only-do-not-override-1vtf12y"
        >
          Watchlist
        </h1>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-1vtf12y"
      style="margin: -8px -12px -8px -12px;"
    >
      <div
        class="ant-col ant-col-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-1vtf12y"
        style="padding: 8px 12px 8px 12px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1vtf12y"
        >
          <div
            class="ant-card-cover"
          >
            <img
              alt="Poster"
              src="https://image.tmdb.org/t/p/w500test/image"
            />
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-card-meta"
            >
              <div
                class="ant-card-meta-detail"
              >
                <div
                  class="ant-card-meta-title"
                >
                  test/title
                </div>
                <div
                  class="ant-card-meta-description"
                >
                  test/overview
                </div>
              </div>
            </div>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 100%;"
            >
              <span>
                <span
                  aria-label="delete"
                  class="anticon anticon-delete"
                  role="img"
                  tabindex="-1"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="delete"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                    />
                  </svg>
                </span>
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ant-col ant-col-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-1vtf12y"
        style="padding: 8px 12px 8px 12px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1vtf12y"
        >
          <div
            class="ant-card-cover"
          >
            <img
              alt="Poster"
              src="https://image.tmdb.org/t/p/w500test/image"
            />
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-card-meta"
            >
              <div
                class="ant-card-meta-detail"
              >
                <div
                  class="ant-card-meta-title"
                >
                  test/title
                </div>
                <div
                  class="ant-card-meta-description"
                >
                  test/overview
                </div>
              </div>
            </div>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 100%;"
            >
              <span>
                <span
                  aria-label="delete"
                  class="anticon anticon-delete"
                  role="img"
                  tabindex="-1"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="delete"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                    />
                  </svg>
                </span>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-row-center css-dev-only-do-not-override-1vtf12y"
    >
      <div
        class="ant-col css-dev-only-do-not-override-1vtf12y"
      >
        <ul
          class="ant-pagination pagination css-dev-only-do-not-override-1vtf12y"
        >
          <li
            aria-disabled="true"
            class="ant-pagination-prev ant-pagination-disabled"
            title="Previous Page"
          >
            <button
              class="ant-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-1"
            tabindex="0"
            title="1"
          >
            <a
              rel="nofollow"
            >
              1
            </a>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-10"
            tabindex="0"
            title="10"
          >
            <a
              rel="nofollow"
            >
              10
            </a>
          </li>
          <li
            aria-disabled="true"
            class="ant-pagination-next ant-pagination-disabled"
            title="Next Page"
          >
            <button
              class="ant-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Watchlist component matches snapshot with 1 page 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="ant-row css-dev-only-do-not-override-1vtf12y"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1vtf12y"
      >
        <h1
          class="ant-typography css-dev-only-do-not-override-1vtf12y"
        >
          Watchlist
        </h1>
      </div>
    </div>
    <div
      class="ant-row css-dev-only-do-not-override-1vtf12y"
      style="margin: -8px -12px -8px -12px;"
    >
      <div
        class="ant-col ant-col-24 ant-col-sm-12 ant-col-md-8 ant-col-lg-8 ant-col-xl-6 css-dev-only-do-not-override-1vtf12y"
        style="padding: 8px 12px 8px 12px;"
      >
        <div
          class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1vtf12y"
        >
          <div
            class="ant-card-cover"
          >
            <img
              alt="Poster"
              src="https://image.tmdb.org/t/p/w500test/image"
            />
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-card-meta"
            >
              <div
                class="ant-card-meta-detail"
              >
                <div
                  class="ant-card-meta-title"
                >
                  test/title
                </div>
                <div
                  class="ant-card-meta-description"
                >
                  test/overview
                </div>
              </div>
            </div>
          </div>
          <ul
            class="ant-card-actions"
          >
            <li
              style="width: 100%;"
            >
              <span>
                <span
                  aria-label="delete"
                  class="anticon anticon-delete"
                  role="img"
                  tabindex="-1"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="delete"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                    />
                  </svg>
                </span>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Watchlist component matches snapshot with error 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="ant-row css-dev-only-do-not-override-1vtf12y"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1vtf12y"
      >
        <h1
          class="ant-typography css-dev-only-do-not-override-1vtf12y"
        >
          Watchlist
        </h1>
      </div>
    </div>
    <div
      class="ant-result ant-result-error css-dev-only-do-not-override-1vtf12y"
    >
      <div
        class="ant-result-icon"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-result-title"
      >
        test/error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Watchlist component matches snapshot with loading 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="ant-row css-dev-only-do-not-override-1vtf12y"
    >
      <div
        class="ant-col ant-col-24 css-dev-only-do-not-override-1vtf12y"
      >
        <h1
          class="ant-typography css-dev-only-do-not-override-1vtf12y"
        >
          Watchlist
        </h1>
      </div>
    </div>
    <div
      class="top-margin"
    >
      <div
        class="ant-row ant-row-center css-dev-only-do-not-override-1vtf12y"
      >
        <div
          class="ant-col css-dev-only-do-not-override-1vtf12y"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-spinning css-dev-only-do-not-override-1vtf12y"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
